--- a/todo.org
+++ b/todo.org
@@ -4,6 +4,7 @@ Leiningen TODOs
 ** TODO Remove install task dependency on having Maven installed (Phil)
 ** TODO Use -Xbootclasspath where possible
 ** TODO Don't write manifest, pom, etc. to disk when jarring (Dan)
+** TODO Don't put uberjar in ~/.m2
 ** TODO Perform compilation in either a subprocess or with a separate classloader
 ** TODO Allow test task to take namespaces as an argument
 ** TODO System/exit appropriately when testing based on pass/fail
