--- a/todo.org
+++ b/todo.org
@@ -8,7 +8,7 @@ Leiningen TODOs
 * For 1.0
 ** TODO Remove install task dependency on having Maven installed       :Phil:
 ** TODO Use -Xbootclasspath where possible
-** TODO Don't write manifest, pom, etc. to disk when jarring            :Dan:
+** DONE Don't write manifest, pom, etc. to disk when jarring            :Dan:
 ** TODO Don't put uberjar in ~/.m2
 ** TODO Perform compilation in either a subprocess or with a separate classloader
 ** TODO Allow test task to take namespaces as an argument
@@ -17,6 +17,8 @@ Leiningen TODOs
 ** TODO doc generation
 ** TODO user config file for activating plugins across all projects
 ** TODO write shell wrappers
+** TODO advise existing tasks from plugins
 * Low Priority
 ** TODO Slim jar task
 ** TODO Remove duplication between deps.clj and pom.clj
+** TODO Resources directory added to classpath? (for properties, etc)
