--- a/todo.org
+++ b/todo.org
@@ -7,9 +7,9 @@ Leiningen TODOs
 
 * For 1.0
 ** TODO Remove install task dependency on having Maven installed       :Phil:
-** TODO Use -Xbootclasspath where possible
-** DONE Don't write manifest, pom, etc. to disk when jarring            :Dan:
-** TODO Don't put uberjar in ~/.m2
+** TODO Use -Xbootclasspath where possible                             :Dan:
+** DONE Don't write manifest, pom, etc. to disk when jarring           :Dan:
+** DONE Don't put uberjar in ~/.m2                                     :Phil:
 ** TODO Perform compilation in either a subprocess or with a separate classloader
 ** TODO Allow test task to take namespaces as an argument
 ** TODO System/exit appropriately when testing based on pass/fail
