Allow test task to take namespaces as an argument.

--- a/todo.org
+++ b/todo.org
@@ -11,7 +11,7 @@ Leiningen TODOs
 ** DONE Don't write manifest, pom, etc. to disk when jarring           :Dan:
 ** DONE Don't put uberjar in ~/.m2                                     :Phil:
 ** TODO Perform compilation in either a subprocess or with a separate classloader
-** TODO Allow test task to take namespaces as an argument
+** DONE Allow test task to take namespaces as an argument
 ** TODO System/exit appropriately when testing based on pass/fail
 * Post 1.0
 ** TODO doc generation
