--- a/todo.org
+++ b/todo.org
@@ -7,12 +7,15 @@ Leiningen TODOs
 
 * For 1.0
 ** DONE Remove install task dependency on having Maven installed       :Phil:
-** TODO Use -Xbootclasspath where possible                             :Dan:
+** DONE Use -Xbootclasspath where possible                              :Dan:
 ** DONE Don't write manifest, pom, etc. to disk when jarring           :Dan:
 ** DONE Don't put uberjar in ~/.m2                                     :Phil:
 ** DONE Perform compilation in either a subprocess or with a separate classloader
 ** DONE Allow test task to take namespaces as an argument
-** TODO System/exit appropriately when testing based on pass/fail
+** TODO System/exit appropriately when testing based on pass/fail      :Phil:
+** TODO Fix eval-in-project to let plugins pass in extra args
+** TODO Resources directory added to classpath (for properties, etc)
+*** This would be a good way for clojure code to have access to lein's version
 * Post 1.0
 ** TODO doc generation
 ** TODO user config file for activating plugins across all projects
@@ -27,6 +30,4 @@ Leiningen TODOs
 ** TODO Source jar task
 ** TODO Run failed tests task
 ** TODO Remove duplication between deps.clj and pom.clj
-** TODO Resources directory added to classpath? (for properties, etc)
-*** This would be a good way for clojure code to have access to lein's version
 ** TODO Help task should display arglist
