--- a/todo.org
+++ b/todo.org
@@ -20,8 +20,10 @@ Leiningen TODOs
 ** TODO doc generation
 ** TODO user config file for activating plugins across all projects
 ** TODO write shell wrappers
+** TODO move repl task from shell script to clojure code
 ** TODO advise existing tasks from plugins
 ** Plugin Ideas:
+*** Code statistics (LOC, doc coverage, etc)
 *** Graph output for dependencies between namespaces
 *** Start web server for web-related projects
 *** Multi-module builds
