--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,15 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.0.1 / ???
+
+* Fix new task.
+
+* Add version task.
+
+* Use jline for repl task.
+
+* Fix pom task for Java 1.5 compatibility.
+
 = 1.0.0 / 2009-12-05
 
 * Source, test, and compilation paths can be set in project.clj.
