--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,14 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.1.0 / ???
 
+* Don't download snapshot releases unless actually needed.
+
+* Make subclassloader's classpath available to projects.
+
+* Fixed "install" task to place pom in local repository.
+
+* Bug fixes to "new" task.
+
 * Only AOT namespaces specified in project.clj.
 
 * Better error handling.
