--- a/todo.org
+++ b/todo.org
@@ -16,20 +16,21 @@ Leiningen TODOs
 ** DONE Fix eval-in-project to let plugins pass in extra args
 ** DONE Resources directory added to classpath (for properties, etc)
 *** This would be a good way for clojure code to have access to lein's vers
-* Post 1.0
-** TODO doc generation
+* For 1.1.0
+** DONE upgrade task (patch submitted)
+** DONE doc generation (autodoc plugin)
+* Later
 ** TODO user config file for activating plugins across all projects
 ** TODO write shell wrappers
 ** TODO move repl task from shell script to clojure code
 ** TODO advise existing tasks from plugins
+** TODO fix OS X bootclasspath issues
 ** Plugin Ideas:
 *** Code statistics (LOC, doc coverage, etc)
 *** Graph output for dependencies between namespaces
 *** Start web server for web-related projects
 *** Multi-module builds
 * Low Priority
-** TODO Slim jar task
-** TODO Source jar task
 ** TODO Run failed tests task
 ** TODO Remove duplication between deps.clj and pom.clj
 ** TODO Help task should display arglist
