--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 Leiningen NEWS -- history of user-visible changes
 
+= 1.2.0 / ???
+
+* Added INTRO.md file for introductory concepts.
+
 = 1.1.0 / 2010-02-16
 
 * Added "lein upgrade" task
