Allow :fork option to be set in project.clj

--- a/todo.org
+++ b/todo.org
@@ -18,9 +18,8 @@ Leiningen TODOs
 ** DONE upgrade task (patch submitted)
 ** DONE doc generation (autodoc plugin)
 * For 1.2.0
-** TODO make help task resilient to broken plugins
 ** DONE make org.clojure implied for clojure/contrib deps
-** TODO better way to force setFork in eval-in-project
+** DONE better way to force setFork in eval-in-project
 ** TODO System/exit appropriately when testing based on pass/fail (abedra)
 *** Needs to set permissions with the ant API's Java task
 ** DONE rename :namespaces key in project.clj
