--- a/NEWS
+++ b/NEWS
@@ -2,13 +2,15 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.2.0 / ???
 
+* Allow :fork and :jvm-opts to be set in project.clj.
+
 * Merge lein-swank plugin into swank-clojure.
 
 * Add :aot as an alias in project.clj for :namespaces to AOT-compile.
 
 * Add option to omit-default-repositories.
 
-* Allow group-id to be omitted when dependeng on Clojure and Contrib.
+* Allow group-id to be omitted when depending on Clojure and Contrib.
 
 * Keep dev-dependencies in lib/dev, exclude them from uberjars.
 
@@ -17,8 +19,6 @@ Leiningen NEWS -- history of user-visible changes
 * Fix repl task to use project subclassloader.
 
 * Don't allow "new" task to create *jure names.
-
-* Keep dev dependencies in lib/dev so uberjar doesn't pick them up.
 
 * Add classpath command.
 
@@ -30,7 +30,7 @@ Leiningen NEWS -- history of user-visible changes
 
 * Generated poms should work in Java IDEs.
 
-* Cygwin support.
+* Improved Cygwin support.
 
 * Added INTRO.md file for introductory concepts.
 
