--- a/todo.org
+++ b/todo.org
@@ -18,8 +18,7 @@ Leiningen TODOs
 ** DONE upgrade task (patch submitted)
 ** DONE doc generation (autodoc plugin)
 * For 1.2.0
-** TODO System/exit appropriately when testing based on pass/fail (abedra)
-*** Needs to set permissions with the ant API's Java task
+** TODO make inter-task dependencies honor hooks
 ** TODO repl task exits on some projects (sample) (patch for this?)
 ** TODO document all known project.clj keys
 ** TODO walk up the filesystem to find project.clj
