Make inter-task dependencies honor hooks.

--- a/todo.org
+++ b/todo.org
@@ -19,12 +19,12 @@ Leiningen TODOs
 ** DONE doc generation (autodoc plugin)
 * For 1.2.0
 ** TODO disable frickin [null] logging from ant (come on srsly)
-** TODO make inter-task dependencies honor hooks
 ** TODO document all known project.clj keys
 ** TODO walk up the filesystem to find project.clj
 ** TODO a list of dirs to include in the jar when building
 ** TODO set arbitrary jar metadata
 ** TODO specify min. lein version in project.clj
+** DONE make inter-task dependencies honor hooks
 ** DONE wire repl task up to socket repl
 ** DONE allow *warn-on-reflection* to be turned on in project.clj
 ** DONE make org.clojure implied for clojure/contrib deps
