--- a/todo.org
+++ b/todo.org
@@ -20,6 +20,7 @@ Leiningen TODOs
 * For 1.2.0
 ** TODO disable frickin [null] logging from ant (come on srsly)
 ** TODO document all known project.clj keys
+** DONE recover from missing test exit map gracefully
 ** DONE Help task should display arglist
 ** DONE walk up the filesystem to find project.clj
 ** DONE make inter-task dependencies honor hooks
@@ -33,6 +34,7 @@ Leiningen TODOs
 ** DONE classpath task to just print configured classpath
 ** DONE move repl task from shell script to clojure code
 * For later
+** TODO bin script has stabilized; self-install for dev versions should work
 ** TODO differentiate between ns-level/fn-level help docstrings
 ** TODO a list of dirs to include in the jar when building
 ** TODO set arbitrary jar metadata
