--- a/todo.org
+++ b/todo.org
@@ -18,8 +18,11 @@ Leiningen TODOs
 ** DONE upgrade task (patch submitted)
 ** DONE doc generation (autodoc plugin)
 * For 1.2.0
-** TODO document plugin creation
-** TODO document all known project.clj keys
+** TODO include lib/dev in find-lib-jars
+** TODO document version ranges
+** TODO document checkout dependencies
+** DONE document plugin creation
+** DONE document all known project.clj keys
 ** DONE disable frickin [null] logging from ant (come on srsly)
 ** DONE recover from missing test exit map gracefully
 ** DONE Help task should display arglist
@@ -35,6 +38,7 @@ Leiningen TODOs
 ** DONE classpath task to just print configured classpath
 ** DONE move repl task from shell script to clojure code
 * For later
+** TODO test classification using metadata; run a subset of tests
 ** TODO bin script has stabilized; self-install for dev versions should work
 ** TODO differentiate between ns-level/fn-level help docstrings
 ** TODO a list of dirs to include in the jar when building
