Document version ranges.

--- a/todo.org
+++ b/todo.org
@@ -18,8 +18,9 @@ Leiningen TODOs
 ** DONE upgrade task (patch submitted)
 ** DONE doc generation (autodoc plugin)
 * For 1.2.0
-** TODO document version ranges
+** TODO accept list of namespaces to compile from command-line options
 ** TODO document checkout dependencies
+** DONE document version ranges
 ** DONE include lib/dev in find-lib-jars
 ** DONE document plugin creation
 ** DONE document all known project.clj keys
