--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.2.0 / ???
 
+* Snapshot versions now allow self-install.
+
 * Allow compile task to take a list of namespaces overriding project.clj.
 
 * Handle more types of project metadata.
