--- a/todo.org
+++ b/todo.org
@@ -21,8 +21,8 @@ Leiningen TODOs
 ** Improve plugins
 *** TODO Allow plugins to be activated user-wide (maybe system-wide?)
 * For 1.2.0
-** TODO document checkout dependencies
-** TODO Re-enable rlwrap
+** DONE document checkout dependencies
+** DONE Re-enable rlwrap
 ** DONE Move the intro into a tutorial
 ** DONE bin script has stabilized; self-install for dev versions should work
 ** DONE accept list of namespaces to compile from command-line options
