--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Leiningen NEWS -- history of user-visible changes
 
 = 1.2.0 / ???
 
+* Don't enable repl rlwrap when unnecessary. (dumb terms, Emacs, etc.)
+
 * Add support for password-protected repositories.
 
 * Allow :jar-name and :uberjar-name to be customized.
